@@ -26,6 +26,7 @@
 	- don't add RPMTAG_RHNPLATFORM to packages and headers.
 	- stop adding ancient rpmlib(...) tracking dependencies to headers.
 	- python: eliminate rhnLoad/rhnUnload methods.
+	- fix: change dbi_type from DB_UNKNOWN iff DB_CREATE is set.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
